[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/player2.gd" type="Script" id=1]
[ext_resource path="res://textures/tileset.png" type="Texture" id=2]
[ext_resource path="res://textures/light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 15.0
color = Color( 0, 0, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.12549, 0.137255, 0.137255, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 49.55
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
tangential_accel = -100.0
angle = -720.0
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 4 )
hue_variation = 0.25
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.9, 7.9 )

[node name="player" type="KinematicBody2D"]
position = Vector2( -1.06066, -4.41942 )
collision_mask = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
shape = SubResource( 1 )

[node name="particles" type="Node2D" parent="."]

[node name="movement" type="Particles2D" parent="particles"]
modulate = Color( 0, 0, 0, 1 )
amount = 100
lifetime = 0.01
speed_scale = 64.0
local_coords = false
process_material = SubResource( 2 )

[node name="death" type="Particles2D" parent="particles"]
emitting = false
amount = 6533
one_shot = true
explosiveness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 5 )

[node name="player" type="Sprite" parent="."]
modulate = Color( 0.254902, 0.25098, 0.25098, 1 )
light_mask = 0
z_index = 3
z_as_relative = false
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
process_mode = 0
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 6.64743, -6.468 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
color = Color( 0.447059, 0.431373, 0.713726, 1 )
range_height = 2048.0
shadow_enabled = true
shadow_color = Color( 1, 0, 0, 0 )
shadow_buffer_size = 2800
shadow_gradient_length = 1.0
shadow_filter = 5
shadow_filter_smooth = 4.5
__meta__ = {
"_editor_description_": ""
}

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 15 )

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 25, 0 )

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 25, 0 )

[node name="deathTimer" type="Timer" parent="."]
one_shot = true

[node name="visionTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="speedTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="timeout" from="deathTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="visionTimer" to="." method="_on_visionTimer_timeout"]
[connection signal="timeout" from="speedTimer" to="." method="_on_speedTimer_timeout"]
